RESOLVED FIXED270669
[WebXR] Skip freezing layer tree with an active WebXR immersive session only when there's video content
https://bugs.webkit.org/show_bug.cgi?id=270669
Summary [WebXR] Skip freezing layer tree with an active WebXR immersive session only ...
Ada Chan
Reported 2024-03-07 15:33:13 PST
[WebXR] Skip freezing layer tree with an active WebXR immersive session only when there's video content
Attachments
Ada Chan
Comment 1 2024-03-07 15:33:31 PST
Ada Chan
Comment 2 2024-03-07 15:38:57 PST
EWS
Comment 3 2024-03-08 09:51:59 PST
Committed 275842@main (2b9b6bf2f2fb): <https://commits.webkit.org/275842@main> Reviewed commits have been landed. Closing PR #25601 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.