[WebXR] Skip freezing layer tree with an active WebXR immersive session only when there's video content https://bugs.webkit.org/show_bug.cgi?id=270669 rdar://123777699

Reviewed by Eric Carlson.

We initially skip freezing the layer tree with an active WebXR immersive session
so videos can continue to get their requestVideoFrameCallback serviced. However,
since this also incurs a power cost, we'll only do this when there's video
content on the page.

* Source/WebCore/page/Page.cpp:
(WebCore::Page::shouldBlockLayerTreeFreezingForVideo):
* Source/WebCore/page/Page.h:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::updateDrawingAreaLayerTreeFreezeState):

Canonical link: https://commits.webkit.org/275842@main